Testing code for IConvertList